# bugalizer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .handoff-session.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  handoff-state.json  pyproject.toml  requirements.txt
.claude/skills/phase/: SKILL.md
.claude/skills/pii-scan/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/security-check/: SKILL.md
.claude/skills/test/: SKILL.md
.tagteam/: tagteam.db-shm
docs/: decision_log.md  deploy-windows.md  roadmap.md  smoke-test.md
docs/handoffs/: architecture_impl_cycle.md  architecture_plan_cycle.md  codebase_analysis_impl_cycle.md  codebase_analysis_plan_cycle.md  local_llm_pipeline_impl_cycle.md  local_llm_pipeline_plan_cycle.md  phase-4-fix-proposals_impl_rounds.jsonl  phase-4-fix-proposals_impl_status.json  phase-5-deployment-readiness_impl_rounds.jsonl  phase-5-deployment-readiness_impl_status.json  phase-5-deployment-readiness_plan_rounds.jsonl  phase-5-deployment-readiness_plan_status.json
docs/phases/: architecture.md  codebase_analysis.md  local_llm_pipeline.md  phase-4-fix-proposals.md  phase-5-deployment-readiness.md
src/bugalizer/: __init__.py  auth.py  config.py  db.py  main.py  models.py
src/bugalizer/api/: projects.py  queue.py  reports.py  usage.py
src/bugalizer/git_ops/: repo.py  (+1 more)
templates/: sync_state.md
tests/: conftest.py  test_analysis_mode.py  test_api.py  test_config_tiering.py  test_fix_proposer.py  test_git_ops.py  test_localizer.py  test_pipeline.py  test_queue.py  test_repo_map.py  test_usage.py
(+13 files in other folders)
