[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugalizer"
version = "0.1.0"
description = "AI-powered bug report processing server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm>=1.30",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-java>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx2>=0.1",
    "pytest-asyncio>=0.23",
    "tagteam>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
